<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="15dp"
                android:text="¿Qué es Rengoring?"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:layout_marginRight="20dp"
                android:layout_marginBottom="15dp"
                android:text="@string/que_es_i"


                android:textColor="@color/black"
                android:textSize="24sp" />

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:layout_marginRight="20dp"
                android:layout_marginBottom="15dp"
                android:text="@string/que_es_ii"


                android:textColor="@color/black"
                android:textSize="24sp" />

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:layout_marginRight="20dp"
                android:layout_marginBottom="15dp"
                android:text="@string/que_es_iii"


                android:textColor="@color/black"
                android:textSize="24sp" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>